Bug 381915 - The path tool can snap to ends of nodes, but doesn't connect the new paths.
Summary: The path tool can snap to ends of nodes, but doesn't connect the new paths.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-02 15:38 UTC by wolthera
Modified: 2018-02-20 15:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2017-07-02 15:38:34 UTC
One would expect that when connecting to old nodes at the end of a previous path, the path is being continued. This is not the case.
Comment 1 Dmitry Kazakov 2018-02-20 15:03:27 UTC
Git commit 91b00ced2f0d555b820538114316c4c967426ea3 by Dmitry Kazakov.
Committed on 20/02/2018 at 15:03.
Pushed by dkazakov into branch 'master'.

Make Krita's Create Path Tool first try to merge-in into an existing shape

The newly added shape will try to reuse existing shape's styles

M  +41   -13   libs/basicflakes/tools/KoCreatePathTool.cpp
M  +4    -0    libs/basicflakes/tools/KoCreatePathTool.h
M  +3    -1    plugins/tools/basictools/kis_tool_path.cc

https://commits.kde.org/krita/91b00ced2f0d555b820538114316c4c967426ea3