Make Krita's Create Path Tool first try to merge-in into an existing shape

The newly added shape will try to reuse existing shape's styles

BUG:381915